[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.2.1"
atoi = "0.3.2"
bytes = "0.5.4"
structopt = "0.3.14"
tokio = { version = "0.2.21", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "0.2", features = ["test-util"] }